--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio - Herson Sosa</title>
+    <link rel="stylesheet" href="/css/styles.css">
+</head>
+
+<body>
+    <a name="top"></a>
+    <div class="banner">
+        <h1 class="banner-head">
+            <!-- <img src="./img/coding.jpg"> -->
+            "Be proud of who you are, and what you have accomplished but,<br> do not ever be satisfied. There is always
+            room for improvement."
+        </h1>
+    </div>
+
+    <header>
+        <h1>Welcome</h1>
+        <span>Lorem ipsum dolor sit..</span>
+    </header>
+
+    <main>
+        <section id="about">
+            <h2>About</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Dui sapien eget mi proin sed. Tincidunt eget nullam non nisi. Velit dignissim
+                sodales ut eu sem integer.
+            </p>
+            <p>Nibh cras pulvinar mattis nunc sed blandit libero volutpat. Vel risus commodo viverra maecenas accumsan
+                lacus. Diam vel quam elementum pulvinar etiam.
+            </p>
+            <p>Faucibus turpis in eu mi bibendum. Porttitor massa id neque aliquam. Donec pretium vulputate sapien nec
+                sagittis aliquam. Lorem ipsum dolor sit amet consectetur adipiscing. Est lorem ipsum dolor sit amet
+                consectetur.
+
+            </p>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+            <section id="projectlist">
+                <div class="project1">
+                    <article>
+                        <h3>Virtual Pet Shelter</h3>
+                        <img src="./img/PetShelter.jpg">
+                        <p>Pet shelter description yadayadayadayadayadayada</p>
+                    </article>
+                </div>
+                <div class="project2">
+                    <article>
+                        <h3>Guessing Game</h3>
+                        <img src="./img/image2.jpg">
+                        <p>guessing game description yadayadayadayadayadayada</p>
+                    </article>
+                </div>
+                <div class="project3">
+                    <article>
+                        <h3>project 3</h3>
+                        <img src="./img/image3.jpg">
+                        <p>project 3 description yadayadayadayadayadayadaya</p>
+                    </article>
+                </div>
+            </section>
+        </section>
+
+        <section id="skills">
+            <h2>Skills</h2>
+            <p>
+            <ul>
+                <li>Java 50 %</li>
+                <li>HTML 10 %</li>
+                <li>CSS 5%</li>
+                <li>JavaScript 2%</li>
+                <li> Python 47%</li>
+            </ul>
+            </p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Feel free to contact me at any time at the following:
+            </p>
+        </section>
+    </main>
+    <nav class="navigationbar">
+        <div class="max-width">
+        </div>
+        <ul class="menu">
+            <a href="#top" class="menu-btn">Home</a>
+            <a href="#about" class="menu-btn">About</a>
+            <a href="#projects" class="menu-btn">Projects</a>
+            <a href="#skills" class="menu-btn">Skills</a>
+            <a href="#contact" class="menu-btn">Contact</a>
+        </ul>
+        </div>
+    </nav>
+</body>
+
+</html>
