--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 consectetur.
 
             </p>
-            <a href="./img/Resume Template - Herson Sosa.docx" download>Download Resume</a>
+            <a href="./img/Resume PDF - Herson Sosa.pdf" download>Download Resume</a>
         </section>
 
         <section id="projects">
