--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
     <header>
         <h1>Hello, <br> I am Herson Sosa.</h1>
-        <span>Welcome to my portfolio. Follow for more information: &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span>
+        <span>
         <a href="./img/Resume PDF - Herson Sosa.pdf" target="_blank"><img src="./img/cv lrge.jpg" class="icon"></a>
         <a href="https://www.linkedin.com/in/hersonsosa1/" target="_blank"><img src="./img/new-linkedin-logo-white-black-png-800x800.png" class="icon"></a>
-        <a href="https://github.com/hersonsosa" target="_blank"><img src="./img/github-icon-for-resume-12.jpg" class="icon"></a>      
+        <a href="https://github.com/hersonsosa" target="_blank"><img src="./img/github-icon-for-resume-12.jpg" class="icon"></a>  
+        </span>    
     </header>
 
     <main>
@@ -97,11 +98,7 @@
             </p>
         </section>
         <section id="contact">
-            <h2>Contact Me&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-            <a href="./img/Resume PDF - Herson Sosa.pdf" target="_blank"><img src="./img/cv lrge.jpg" class="icon"></a>
-            <a href="https://www.linkedin.com/in/hersonsosa1/" target="_blank"><img src="./img/new-linkedin-logo-white-black-png-800x800.png" class="icon"></a>
-            <a href="https://github.com/hersonsosa" target="_blank"><img src="./img/github-icon-for-resume-12.jpg" class="icon"></a>      
-            </h2>
+            <h2>Contact Me</h2>
             <div class="container">
                 <form action="https://formspree.io/f/xdobewwl" method="POST">
 
