--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <a href="mailto:hersonsosa1@gmail.com" class="footer__link">hersonsosa1@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="./img/Resume PDF - Herson Sosa.pdf" target="_blank"><img src="./img/resume dl.png" class="icon"></a>
+                <a class="social-list__link" href="./img/Resume Template - Herson Sosa.pdf" target="_blank"><img src="./img/resume dl.png" class="icon"></a>
             </li>
             <li class="social-list__item">
                 <a class="social-list__link" href="https://www.linkedin.com/in/hersonsosa1/" target="_blank"><img src="./img/linkedin icon.png" class="icon"></a>
